--- a/frontend/style.css
+++ b/frontend/style.css
@@ -15,6 +15,20 @@ header {
 #feed, #search {
     clear: both;
 }
+#wrapper {
+    background: #fff;
+    border-radius:25px 75px;
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    margin: 16px auto;
+    max-width: 1260px;
+    padding: 2.25%; /* 18px / 800px */
+    width: 85%;
+    position: absolute;
+    left: 5%;
+    right: 5%;
+  }
 
 .comment {
     background-color: #fff;
@@ -69,21 +83,9 @@ header {
 .user img {
     border-radius: 25px 45px;
     margin-bottom: -20px;
+    width: 100px;
+    height: 100px;
 }
 .user h4 {
     margin-bottom: -5px;
 }
-.wrapper {
-    background: #fff;
-    border-radius:25px 75px;
-    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    box-shadow: 0 0 10px rgba(0,0,0,.3);
-    margin: 16px auto;
-    max-width: 1260px;
-    padding: 2.25%; /* 18px / 800px */
-    width: 85%;
-    position: absolute;
-    left: 5%;
-    right: 5%;
-  }
