--- a/frontend/style.css
+++ b/frontend/style.css
@@ -17,11 +17,11 @@ div.details, div.title {
     width: 50%;
     list-style-type: none;
 }
-#feed, #search, .comments {
+#feed, #search {
     clear: both;
 }
 #top {
-
+    padding-bottom: 135px;
 }
 #wrapper {
     background: #fff;
@@ -37,19 +37,7 @@ div.details, div.title {
     left: 5%;
     right: 5%;
   }
-
-.comment {
-    background-color: #fff;
-    border-radius: 25px 75px;
-    border: none;
-    margin: 0px;
-    padding: 10px;
-    padding-left: 100px;
-    margin-bottom: 5px;
-    width: auto;
-    position: relative;
-}
-.comment img, h6, p {
+h6, p {
     margin: 0px;
 }
 .details {
@@ -100,38 +88,4 @@ div.details, div.title {
 }
 .user h4 {
     margin-bottom: -5px;
-}
-
-/* modal */
-
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
